<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8FC2DA"
    android:orientation="vertical"
    tools:context=".login">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="103dp"
        android:layout_gravity="center"
        android:text="@string/log_in"
        android:textColor="#DF3D3D"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/username"
        android:textColor="#EF4242"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/txtTk1"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_nickname"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="match_parent"
        android:layout_height="77dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/password"
        android:textColor="#EF3E3E"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/txtMk1"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnOk2"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#B0B8E4"
        android:text="@string/o_k" />

    <TextView
        android:id="@+id/txthienthi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtKt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/kiem_tra" />

</LinearLayout>