<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#8FC2DA"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="87dp"
        android:text="@string/welcome"
        android:textColor="#F44336"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:textColor="#E65353" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="201dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:backgroundTint="#B0B8E4"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="#F44336" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="197dp" />

    <Button
        android:id="@+id/btnsignUp"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#B0B8E4"
        android:text="@string/sign_up"
        android:textColor="#F44336" />
</LinearLayout>